--- a/src/universidad_equipo85/Vistas/AlumnosIF.form
+++ b/src/universidad_equipo85/Vistas/AlumnosIF.form
@@ -70,19 +70,14 @@
                                               <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
                                               <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
                                           </Group>
+                                          <EmptySpace min="55" pref="55" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                                                  <Component id="jcboxEstado" min="-2" max="-2" attributes="0"/>
-                                              </Group>
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                      <Component id="jtApellido" alignment="0" pref="216" max="32767" attributes="0"/>
-                                                      <Component id="jtNombre" alignment="0" max="32767" attributes="0"/>
-                                                      <Component id="jtDocumento" alignment="0" max="32767" attributes="0"/>
-                                                      <Component id="jtId" alignment="0" max="32767" attributes="0"/>
-                                                  </Group>
+                                              <Component id="jcboxEstado" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                                                  <Component id="jtApellido" alignment="0" pref="216" max="32767" attributes="0"/>
+                                                  <Component id="jtNombre" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="jtDocumento" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="jtId" alignment="0" max="32767" attributes="0"/>
                                               </Group>
                                           </Group>
                                       </Group>
