--- a/src/universidad_equipo85/Vistas/CargaDeNotasIF.form
+++ b/src/universidad_equipo85/Vistas/CargaDeNotasIF.form
@@ -158,7 +158,7 @@
                   <Table columnCount="3" rowCount="0">
                     <Column editable="true" title="Title 1" type="java.lang.Object"/>
                     <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                    <Column editable="true" title="Title 3" type="java.lang.Object"/>
+                    <Column editable="true" title="Title 3" type="java.lang.Double"/>
                   </Table>
                 </Property>
               </Properties>
