--- a/src/universidad_equipo85/Vistas/MenuPrincipal.form
+++ b/src/universidad_equipo85/Vistas/MenuPrincipal.form
@@ -167,19 +167,19 @@
           <Color blue="f1" green="e6" red="d4" type="rgb"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[800, 600]"/>
+          <Dimension value="[900, 700]"/>
         </Property>
       </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jpFondo" alignment="0" max="32767" attributes="0"/>
+              <Component id="jpFondo" alignment="0" pref="792" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jpFondo" alignment="0" max="32767" attributes="0"/>
+              <Component id="jpFondo" alignment="0" pref="558" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -188,6 +188,9 @@
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="a3" green="71" red="24" type="rgb"/>
+            </Property>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[900, 700]"/>
             </Property>
           </Properties>
 
@@ -214,7 +217,7 @@
                   <Image iconType="3" name="/universidad_equipo85/imagenes/logo-ulp.png"/>
                 </Property>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[792, 581]"/>
+                  <Dimension value="[900, 700]"/>
                 </Property>
               </Properties>
             </Component>
